# ChangeLog for sys-apps/man
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/man/ChangeLog,v 1.173 2012/04/26 15:13:29 aballier Exp $

  26 Apr 2012; Alexis Ballier <aballier@gentoo.org> man-1.6g.ebuild:
  keyword ~amd64-fbsd

  02 Feb 2012; Samuli Suominen <ssuominen@gentoo.org> man-1.6g.ebuild:
  ppc/ppc64 stable wrt #398461

  22 Jan 2012; Raúl Porcel <armin76@gentoo.org> man-1.6g.ebuild:
  alpha/arm/ia64/m68k/s390/sh/sparc stable wrt #398461

  21 Jan 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> man-1.6g.ebuild:
  x86 stable wrt bug #398461

  17 Jan 2012; Jeroen Roovers <jer@gentoo.org> man-1.6g.ebuild:
  Stable for HPPA (bug #398461).

  14 Jan 2012; Agostino Sarubbo <ago@gentoo.org> man-1.6g.ebuild:
  Stable for AMD64, wrt bug #398461

  13 Apr 2011; Ulrich Mueller <ulm@gentoo.org> man-1.6f-r4.ebuild,
  man-1.6f-r5.ebuild, man-1.6g.ebuild:
  Don't PROVIDE virtual/man, it is a new-style virtual now. Bug 358839.

  06 Jan 2011; Mike Frysinger <vapier@gentoo.org> man-1.6g.ebuild:
  Update blocker to allow newer versions of app-arch/lzma #218459.

*man-1.6g (02 Jan 2011)

  02 Jan 2011; Mike Frysinger <vapier@gentoo.org> +man-1.6g.ebuild,
  +files/man-1.6g-compress.patch, +files/man-1.6g-fbsd.patch,
  +files/man-1.6g-xz.patch, metadata.xml:
  Version bump.

  30 Oct 2010; Raúl Porcel <armin76@gentoo.org> man-1.6f-r4.ebuild:
  alpha/ia64/m68k/s390/sh/sparc stable wrt #338088

  12 Oct 2010; Jeroen Roovers <jer@gentoo.org> man-1.6f-r4.ebuild:
  Stable for HPPA (bug #338088).

  10 Oct 2010; Markus Meier <maekke@gentoo.org> man-1.6f-r4.ebuild:
  arm stable, bug #338088

  30 Sep 2010; Brent Baude <ranger@gentoo.org> man-1.6f-r4.ebuild:
  stable ppc64, bug 338088

  27 Sep 2010; Brent Baude <ranger@gentoo.org> man-1.6f-r4.ebuild:
  Marking man-1.6f-r4 ppc for bug 38088

  25 Sep 2010; Markus Meier <maekke@gentoo.org> man-1.6f-r4.ebuild:
  amd64/x86 stable, bug #338088

*man-1.6f-r5 (19 Sep 2010)
