@@ -37,17 +37,14 @@ AUX man-1.6g-compress.patch 343 RMD160 f4e5511b5edb41da3d5d52eabf6d8c6d47e6b340 
 AUX man-1.6g-fbsd.patch 366 RMD160 0b1340eac6f15befae81f5392c59e088a7ebcc89 SHA1 675d06ddbced45f0e1ebcfcb88c82136702bd860 SHA256 fd4e50be32571103e9880b9291c691d45a225a7d6f2b27ff05168d22dbce7336
 AUX man-1.6g-prefix-path.patch 1273 RMD160 10960d68e85bc3e07a93d00407fdcfe74476ecd9 SHA1 424fb788e1efd3241c2d34244382d0fa6d596e80 SHA256 4a406c86ff4cd541f4526f73ecf94163639b2034ef479bb8aa19d5de6824caef
 AUX man-1.6g-xz.patch 1848 RMD160 222e3152d36397cc6723564d61d4e6a394239767 SHA1 e1386c99b0d39fcf7d6f3cc9889c64519d51d96e SHA256 7c11114ec34f017d0641c9a7ecd9ad8b93f6c226e9bdd54fd0fedf1313451634
-DIST man-1.6f.tar.gz 254827 RMD160 8680bb94bff9b86fb9d061f58d9acb08c934531e SHA1 c97012607ed9d75a6eee7e66d257a99a8ed86918 SHA256 9f208c7e1981371ad4481d6e6c2c566bc726a15778723f94136d220fb9375f6c
 DIST man-1.6g.tar.gz 256906 RMD160 f1a845bcf454424f49a3281a86217af0328d88e2 SHA1 ef9e1f36a1a536a31112d52c3f39340900b0d3cb SHA256 ccdcb8c3f4e0080923d7e818f0e4a202db26c46415eaef361387c20995b8959f
-EBUILD man-1.6f-r05.1.ebuild 6047 RMD160 8c351357ad1fbe6a1e8e61ac50f1085b3fd6cf5c SHA1 588eb7cd19707f9c1e89b9d54691a6b49840319f SHA256 3c6dc06d35848e2167276347063b35210bbbba14379824bce729c7154bc0436e
-EBUILD man-1.6f-r4.ebuild 5809 RMD160 cfc606e1fd400fbda63edd8f51b770f6fc0944d7 SHA1 213e635037e5791b351189dc49c4690f735eceed SHA256 b39b5be449e65c49567db6b86c1d18f68113fa453303715de706a8af64b1a0d6
-EBUILD man-1.6g.ebuild 5709 RMD160 6942ae8b4fc8c0b234029c2d775bfb4fb46c8407 SHA1 1a58fcf1fc853f7383aff3c2f8ed02ed38b6ad63 SHA256 4b73d0bc2bfbf690960b7edb1ff3969471084e1b77277f2263075ded6fbde1a8
-MISC ChangeLog 23678 RMD160 c5cddfa33ebf1a2b8013188085422f1903fb448f SHA1 01e91d53f7215a340f92ce2ee7c9b7f392eaeaf9 SHA256 aeb4ea369a9678ed5f27f0f690992c26cfdbcdfbf8998e5e209946fc03780016
+EBUILD man-1.6g.ebuild 5713 RMD160 cc2d50cb7c8e10c7134e0e2177bc87a78c4209e3 SHA1 e4c79607fcb2b51e0d34470a4ddf88d65c0679c5 SHA256 cf77c3d114cf11c1cb0161532acb13fdc56741368420fd73be2b6ba0c979d85b
+MISC ChangeLog 23821 RMD160 4571cfcd91bbdd414b4b69edbd7adcbe8645097a SHA1 d0b43e287196247b29c0a25b9355714b1d9d1677 SHA256 d77c87bc424e4da4a3b4f6bd4a790d0d64fa528013c0f26fa2ad29cd334e8c96
 MISC metadata.xml 164 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 SHA1 9c213f5803676c56439df3716be07d6692588856 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (SunOS)
 
-iEYEARECAAYFAk/AuFAACgkQX3X2B8XHTomCIgCfamh1PSdDfaA6TfWFfTKxcTIL
-yK0AoJWTCtbzCPRxQ4iTSdrWTYhuuT6z
-=bHbI
+iEYEARECAAYFAk/CF1cACgkQX3X2B8XHTomgOwCfdvMgeky+XKoXbR6nEEAjyK98
+q+MAnRvDh/7YSDi71e6sJkb9Qdc3v5s6
+=yoq+
 -----END PGP SIGNATURE-----
